Upgrade project to Java 21